Fix add shift page

--- a/src/main/resources/static/style/common/modal.css
+++ b/src/main/resources/static/style/common/modal.css
@@ -1,8 +1,3 @@
-#inputFra, #inputTil, .form-control-feedback {
-    top: 0;
-    right: -15px;
-}
-
 .datepicker {
     z-index: 1600 !important; /* has to be larger than 1050 */
 }
