--- a/src/main/resources/static/style/common/navbar.css
+++ b/src/main/resources/static/style/common/navbar.css
@@ -174,3 +174,16 @@ This class is added to the body when a modal is shown and removed when hidden */
     cursor: pointer;
     filter: brightness(80%);
 }
+
+.date-input {
+    height: 52px;
+    font-size: 17px;
+}
+
+.bs-placeholder {
+    margin-top: 0;
+}
+.bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+    width: 100% !important;
+}
+
